# Ullim-VITS

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  setup.sh
configs/: config.yaml  inference.yaml
configs/data/: zeroth.yaml
configs/model/: vits_base.yaml
configs/train/: default.yaml
docs/: installation.md  training.md
tools/: download_zeroth.py  preprocess_dataset.py
ullim_vits/: __init__.py
ullim_vits/cli/: inference.py  preprocess.py  train.py
ullim_vits/data/: __init__.py  collate.py  dataset.py  text_processing.py
ullim_vits/inference/: __init__.py  fewshot_adapter.py  synthesizer.py
ullim_vits/losses/: __init__.py  adversarial.py  feature_matching.py  kl_loss.py  reconstruction.py
ullim_vits/models/: __init__.py
ullim_vits/models/common/: __init__.py  attention.py  flows.py  residual.py
ullim_vits/models/discriminator/: __init__.py  mpd.py  msd.py
ullim_vits/models/speaker_encoder/: __init__.py  encoder.py
ullim_vits/models/vits/: __init__.py  decoder.py  duration_predictor.py  posterior_encoder.py  prior_encoder.py  vits.py
ullim_vits/training/: __init__.py  optimizer.py  scheduler.py  trainer.py
ullim_vits/utils/: __init__.py  alignment.py  audio.py  logging.py  phonemizer.py
