[tool.poetry]
name = "ullim-vits"
version = "0.1.0"
description = "Few-shot Korean voice cloning with VITS"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ullim_vits"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.5.0"
torchaudio = "^2.5.0"
hydra-core = "^1.3.0"
omegaconf = "^2.3.0"
librosa = "^0.10.0"
wandb = "^0.16.0"
einops = "^0.7.0"
rich = "^13.0.0"
tqdm = "^4.66.0"
g2pk2 = "^0.0.3"
jamo = "^0.4.1"
datasets = "^2.14.0"
huggingface-hub = "^0.19.0"
scipy = "^1.11.0"
numpy = "^1.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
ruff = "^0.1.0"
mypy = "^1.7.0"
jupyter = "^1.0.0"
ipykernel = "^6.25.0"

[tool.poetry.scripts]
ullim-train = "ullim_vits.cli.train:main"
ullim-infer = "ullim_vits.cli.inference:main"
ullim-preprocess = "ullim_vits.cli.preprocess:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
